--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="txt_set_branch">Set Branch</string>
     <string name="txt_choose_day">Choose Day</string>
     <string name="txt_add_new_day">Add New Day</string>
+    <string name="txt_contribution">Transaction Details</string>
 
 
     <string-array name="months_array">
